@@ -1,3 +1,9 @@
+2004-12-09  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/16681
+	* g++.dg/init/array15.C: New.
+	* g++.dg/init/array16.C: New.
+
 2004-11-29  Roger Sayle  <roger@eyesopen.com>
 
 	PR rtl-optimization/9771
