@@ -1,3 +1,9 @@
+2004-12-09  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/16681
+	* init.c (build_zero_init): Build a RANGE_EXPR for an array
+	initializer.
+
 2004-09-30  Release Manager
 
 	* GCC 3.3.5 Released.
